# portawag

./: .env.testing  Dockerfile  Makefile  Procfile  manage.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-to-heroku.yml
config/: urls.py  wsgi.py
config/settings/: base.py  ci.py  dev.py  production.py
portafolio/: wsgi.py
portafolio/fixtures/: backup.json
portafolio/home/: blocks.py  fields.py  models.py
portafolio/home/migrations/: 0003_auto_20210508_2217.py  0004_auto_20210508_2229.py  0005_socialmediasetting.py  0006_homepage_body.py  0007_auto_20210510_0132.py  0008_auto_20210510_0234.py  0009_auto_20210511_0038.py  0010_homepage_experiences.py  0011_homepage_interests.py  0012_homepage_awards.py  0013_auto_20210511_1925.py  0014_auto_20210511_1944.py
portafolio/home/templates/home/: home_page.html
portafolio/home/templates/home/blocks/: award_block.html  experience_block.html  skill_block.html  study_block.html  workflow_block.html
portafolio/settings/: base.py  dev.py
portafolio/templates/: 404.html  base.html
